# ocr_pipeline

./: .dockerignore  .env.example  .gitignore  ANALYTICS_IMPLEMENTATION.md  DEPLOYMENT.md  DOCSTRANGE_INTEGRATION_SUMMARY.md  DOCUMENT_PROCESSING_UPDATE.md  Dockerfile  FEATURE_ROADMAP.md  GITHUB_ACTIONS_SETUP.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_STATUS.md  README.md  SETUP_INSTRUCTIONS.md  TEXT_EXTRACTION_INTEGRATION.md  USER_MANAGEMENT_PLAN.md  fix_path.pth  generate_azure_credentials.sh  pyproject.toml  requirements.txt  run_local.sh  sitecustomize.py  startup.sh  wsgi.py
.github/workflows/: deploy.yml  deploy.yml.disabled
alembic/: env.py
alembic/versions/: 28c1370ff4b5_add_user_id_to_schema_definitions_for_.py  456812108674_add_user_id_to_documents_for_user_based_.py  46d6eb456b90_add_user_management_system.py  549cf3fc013e_add_timing_fields_to_document_ocr_.py  5a19fd107af7_add_user_id_to_folders_for_home_folders.py  86936114185a_add_users_table_for_user_management.py  8b22df3346df_add_trash_folder_support_to_folders.py  9721a65b3ddf_add_user_id_and_is_home_to_folders.py  9eb4490a7535_add_user_api_keys_and_password_tracking.py  a1b2c3d4e5f6_add_user_id_to_schema_definitions.py  b2c3d4e5f6a7_add_is_public_to_schema_definitions.py  c454111df232_add_is_public_to_schemas.py  cb8026f6cee1_add_folders_table_and_folder_id_to_.py  dd7363bfe470_add_document_metrics_table.py  e8a2e8a2a4f9_initial_migration_with_all_models.py
app/: main.py
app/core/: config.py
app/db/: init_db.py  models.py  session.py
app/models/: auth.py  document.py  (+1 more)
infra/: main.bicep
(+42 files in other folders)
