[project]
name = "parasail-ocr-pipeline"
version = "0.1.0"
description = "Parasail OCR Pipeline service built with FastAPI for Azure App Service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "gunicorn>=21.2.0,<22.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29.0,<1.0",
    "pydantic-settings>=2.1.0,<3.0",
    "python-multipart>=0.0.9,<0.1",
    "jinja2>=3.1.3,<4.0",
    "azure-identity>=1.16.0,<2.0",
    "azure-storage-blob>=12.19.0,<13.0",
    "openai>=1.14.0,<2.0",
    "httpx>=0.27.0,<0.28.0",
]

[project.optional-dependencies]
docling = [
    "docling>=0.6.0",
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
